Improve after code-review

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -8,9 +8,12 @@
            [innerText]="'App.HomePage.JoinCountMeInButton' | translate">
         </a>
         <div class="logos">
-            <img src="assets/images/logo-broad.svg" [alt]="'App.HomePage.IntroductionSection.BroadAlt' | translate">
+            <img src="assets/images/logo-broad.svg"
+                 [alt]="'App.HomePage.IntroductionSection.BroadAlt' | translate"
+                 width="124" height="32">
             <img src="../../../assets/images/dana-farber-logo.png"
-                 [alt]="'App.HomePage.IntroductionSection.DanaFarberAlt' | translate">
+                 [alt]="'App.HomePage.IntroductionSection.DanaFarberAlt' | translate"
+                 width="124" height="32">
         </div>
     </section>
 
