--- a/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/about-us.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/about-us.component.html
@@ -93,14 +93,9 @@
         *ngFor="
           let member of 'AboutUsPage.OurTeam.ProjectManagement.Members'
             | translate;
-          let first = first
         "
       >
-        <div
-          class="col-lg-3 col-md-3 col-sm-6 col-xs-12"
-          [class.col-lg-offset-3]="first"
-          [class.col-md-offset-3]="first"
-        >
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
           <ng-container
             *ngTemplateOutlet="memberTemplate; context: { member: member }"
           ></ng-container>
