DDP-6400 rgp: add spacing before show-more

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/study-messages/study-messages.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/study-messages/study-messages.component.html
@@ -67,6 +67,7 @@
             <div
               *ngIf="!!showMoreMap[message.more]"
               [innerHTML]="message.more | translate"
+              class="show-more-container"
             ></div>
 
             <button class="show-more-btn" (click)="toggleShowMore(message)">
