--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
@@ -8,7 +8,7 @@
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
                 <ng-container *ngFor="let paragraph of item.Paragraphs">
-                    <p class="faq-block__text" [innerHTML]="paragraph"></p>
+                    <p class="faq-block__text" [innerHTML]="paragraph" routeTransformer></p>
                 </ng-container>
             </ng-template>
         </mat-expansion-panel>
