--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.scss
@@ -4,7 +4,7 @@ $icon-margin-right: 2rem;
 $question-padding: 1.5rem;
 
 .faq-block__icon {
-    font-size: 30px;
+    font-size: 1.88rem;
     margin-right: $icon-margin-right;
 }
 
@@ -18,7 +18,7 @@ $question-padding: 1.5rem;
 
 .mat-expansion-panel {
     border-top: 2px solid $border-color;
-    font-size: 24px;
+    font-size: 1.5rem;
 
     &:last-child {
         border-bottom: 2px solid $border-color;
