--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -238,6 +238,7 @@ section {
     border: 2px solid #000000;
     border-radius: 4px;
     text-decoration: none;
+    box-shadow: none;
 
     &:focus {
         outline: none;
