Circadia: home page content fixes

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/home/home.component.html
@@ -22,7 +22,7 @@
       {{ 'HomePage.About.Title' | translate }}
     </h2>
 
-    <p class="paragraph mb-5">
+    <p class="paragraph">
       {{ 'HomePage.About.Paragraph' | translate }}
     </p>
   </div>
