--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.scss
@@ -17,6 +17,7 @@
     align-items: center;
     margin: auto;
     padding: 0 1.5625rem;
+    height: $header-height;
 }
 
 .navigation {
@@ -143,6 +144,10 @@
         }
 
     }
+}
+
+.project-logo > * {
+    display: inline-block;
 }
 
 @media screen and (max-width: 945px) {
