--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables.scss';
+@import '../../../styles/common.scss';
 
 $container-width: 1200px;
 
@@ -207,24 +208,17 @@ section {
 }
 
 .title, .text {
-    max-width: 728px;
+    max-width: 45.5rem;
     margin: 0 auto;
     text-align: center;
 }
 
 .title {
-    font-family: Source Serif Pro;
-    font-size: 2.5rem;
-    font-weight: 600;
-    letter-spacing: -0.08px;
-    line-height: 50px;
+    @extend .static-page-title;
 }
 
 .text {
-    opacity: 0.8;
-    font-size: 1.5rem;
-    letter-spacing: -0.1px;
-    line-height: 34px;
+    @extend .static-page-paragraph-text
 }
 
 .btn {
@@ -237,6 +231,7 @@ section {
     text-align: center;
     border: 2px solid #000000;
     border-radius: 4px;
+    background-color: transparent;
     text-decoration: none;
     box-shadow: none;
 
