--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq/faq.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq/faq.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/common.scss';
+@import '../../../styles/variables.scss';
 
 .faq {
     padding: 4.56rem 1.5rem 6.12rem 1.5rem;
@@ -16,9 +17,8 @@
 
     .expand-btn {
         color: #282828;
-        font-family: Untitled-Sans-Medium;
+        font-family: $primary-font-medium;
         font-size: 1rem;
-        letter-spacing: 0;
         line-height: 20px;
         padding: 0.63rem 1rem;
         margin-bottom: 1.56rem;
