--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -1,6 +1,14 @@
+// Breakpoints
 $desktop-breakpoint: 1024px;
 $tablet-breakpoint: 768px;
 $mobile-breakpoint: 375px;
 
+// Fonts
+$primary-font: Untitled-Sans-Regular;
+$primary-font-light: Untitled-Sans-Light;
+$primary-font-medium: Untitled-Sans-Medium;
+$second-font: Source Serif Pro;
+
+// Other
 $header-height: 6rem;
 $footer-height: 14.94rem;
