--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-    font-family: 'Untitled-Sans-Regular', sans-serif;
+    font-family: $primary-font, sans-serif;
     color: #000000;
     overflow-y: scroll;
 }
