--- a/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
@@ -1,5 +1,7 @@
+@import '../styles/variables.scss';
+
 .static-page-title {
-    font-family: Source Serif Pro;
+    font-family: $second-font;
     font-size: 2.5rem;
     font-weight: 600;
     letter-spacing: -0.08px;
