--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 $border-color: #EBEBEB;
 $icon-width: 24px;
 $icon-margin-right: 2rem;
@@ -37,10 +39,23 @@ $question-padding: 1.5rem;
         }
     }
 
+    .mat-accordion .mat-expansion-panel {
+        &:first-of-type, &:last-of-type {
+            border-radius: 0;
+        }
+    }
+
     .mat-expansion-panel-header,
     .mat-expansion-panel-content {
         font-size: 1.5rem;
-        font-family: Untitled-Sans-Regular;
+        font-family: $primary-font;
         letter-spacing: 0;
+        text-align: left;
+    }
+
+    .mat-expansion-panel-header.mat-expanded {
+        .faq-block__question {
+            font-family: $primary-font-medium;
+        }
     }
 }
