--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -4,3 +4,9 @@ $mobile-breakpoint: 375px;
 
 $header-height: 6rem;
 $footer-height: 14.94rem;
+
+$primary-font-light: Untitled-Sans-Light;
+$primary-font-regular: Untitled-Sans-Regular;
+$primary-font-medium: Untitled-Sans-Medium;
+
+$text-color: #000000;
