--- a/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
@@ -1,7 +1,7 @@
 @import '../styles/variables.scss';
 
 .static-page-title {
-    font-family: $second-font;
+    font-family: $secondary-font;
     font-size: 2.5rem;
     font-weight: 600;
     letter-spacing: -0.08px;
