--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -9,6 +9,7 @@ body {
     height: 100vh;
     font-size: 16px;
     font-weight: 400;
+    min-width: 370px;
 }
 
 html {
@@ -75,9 +76,6 @@ a {
 }
 
 // TODO: borders below for debug reason. Remove when header and footer are ready
-header {
-    border-bottom: 1px solid black;
-}
 footer {
     border-top: 1px solid black;
 }
